--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 # From https://thoughtbot.com/blog/how-to-git-with-unity
+
+
 # 3D models
 *.3dm filter=lfs diff=lfs merge=lfs -text
 *.3ds filter=lfs diff=lfs merge=lfs -text
@@ -46,9 +48,13 @@
 *.tga filter=lfs diff=lfs merge=lfs -text
 *.tif filter=lfs diff=lfs merge=lfs -text
 *.tiff filter=lfs diff=lfs merge=lfs -text
+
+
 # Collapse Unity-generated files on GitHub
-*.asset filter=lfs diff=lfs merge=lfs -text
+*.asset linguist-generated
 *.mat linguist-generated
 *.meta linguist-generated
 *.prefab linguist-generated
 *.unity linguist-generated
+
+
