--- a/.gitattributes
+++ b/.gitattributes
@@ -53,3 +53,4 @@
 *.prefab linguist-generated
 *.unity linguist-generated
 *.txt filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
