--- a/Assets/_Scripts/Project.asmdef
+++ b/Assets/_Scripts/Project.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:d59f1a299d3131a498b8410d281230e0"
+        "GUID:d59f1a299d3131a498b8410d281230e0",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
